# bachelors-thesis

./: .env  .gitignore  .gitmodules  README.md  Taskfile.yaml  environment.frozen.yaml  environment.yaml  export_table.py  pyproject.toml
.scripts/: build.sh  shell.sh
src/csidrl/: datatypes.py  main_dl_test.py  main_rl_bandits.py  main_rl_bandits_delayed.py  main_rl_bandits_delayed_sb3.py  main_rl_cartpole.py  main_rl_debug_env.py  main_rl_discord_bot.py  main_rl_lander.py  main_rl_mountain_car.py  main_rl_rotate.py  main_rl_rotate_sb3.py  meowtools.py  monitor.py  optimisation.py  visualisation.py
src/csidrl/agents/: agents.py  agents_neural.py  agents_neural_sb3.py
src/csidrl/deep/: meownets.py  sb3_compat_satnet.py
src/csidrl/discord_control/: discordbot.py
src/csidrl/environments/: bandit_env.py  debug_envs.py  hydraulic_rotations.py  hydraulic_valves.py  wrappers.py
src/csidrl/legacy/: agents_neural_legacy.py  meownets_legacy.py
tests/: test_00_imports.py  test_01_imports.py  test_11_torchvison_ops.py  test_20_satnet.py  test_torch.py  torch_gard_test.py
